--- a/embed-style.css
+++ b/embed-style.css
@@ -7,7 +7,7 @@
   box-sizing: border-box; }
 
 /* line 7, /Users/janamills/Documents/GitHub/ActionNetwork/foundation/_embed.scss */
-body.gen_body {
+html.can_embed-html body.gen_body {
   color: #242424;
   margin: 0;
   font-family: neue-haas-unica, sans-serif; }
