--- a/embed-style.scss
+++ b/embed-style.scss
@@ -1,18 +1,19 @@
 /*Colors & Font Stacks to change per brand*/
 //Color sets
 $accent: #ff4b3e; //buttons 
-$secondary-accent: #0E0F1A; //
-$white: #f9f9f9; 
+$secondary-accent: #f6f930; //
+$dark-color: #000114;
+$white: #f9f9f9;  
 
-//Turned up in style
-$main-text: #242424;
+//Turned up in style 
+$main-text: #02042f;
 $heading: $main-text; //heading
 $small-text: #888888;
 $footer-text: $white;
 $error-text: $main-text;
 $links: $secondary-accent;
-
-
+ 
+ 
 $header: $accent; //header background
 $footer: $secondary-accent; //footer background
 $status-bar: $accent;
