--- a/foundation/_embed.scss
+++ b/foundation/_embed.scss
@@ -1,285 +1,90 @@
 /* Base styles */
- * {
-  font-family: $body-font;
-  box-sizing: border-box;
-}
 
-html.can_embed-html body.gen_body {
+html.can_embed-html body#can_fundraising_widget {
   color: $main-text;
   margin: 0;
   font-family: $body-font;
-}
-
-input[type=submit], .button {
-  -webkit-appearance: none;
-}
-
-table {
-    width: 100%;
-    tr{
-        &:first-child {
-            font-weight: 800;
-        }
-        &:nth-child(odd) {
-          background: $white;
-        }
-        td {
-          padding: 10px;
-        }
-    }
-}
-
-
-/* Gen Wrapper is the insider wrapper for header/body/footer */
-.gen_wrapper {
-    padding: 40px 20px;
-    width: 1160px;
-    max-width: 100%;
-    margin: auto;
-    box-sizing: border-box;
-    img {
-      margin: auto;
-      display: block;
-    }
-}
-
-/* Header section */
-#gen_header {
-    padding: 0;
-    background-color: $header; /* [THIS IS GENERATED FROM THE *FIRST* COLOR PICKER OPTION] */
-    text-align: center;
-    .logo {
-        width: 100%;
-        max-width: $logo-width;
-    }
-    .gen_name {
-        margin: 0;
-    }
-}
-
-
-/* Main Wrapper */
-.gen_wrapper #can_embed_form {
-    margin-bottom: 100px;
     
-    a {
-        color:$links; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
-        &:hover {
-            color:$accent; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
-            opacity: .7;
-            text-decoration: none;
+    #can_embed_form {
+        //hide
+        h2.line, #donation_recipient_wrap, #action_info {
+            display: none;
         }
-    }
-    h2.entry-title {
-        font-family: $heading-font;
-    }
-    action_target{
-        font-weight: normal;
-    }
-    .action_letter:before {
-        background-color: $accent;
-    }
-    
-    
-    
-        
-    /*totaliser*/
-    .action_status_tracker .action_status_status_bar {
-        height: 11px;
-        &>span {
-
-            span.action_status_status_bar-grow {
-                background-color: $status-bar;
-                height: 11px;
-                .grow-dot {
-                    background-color: $status-bar;
-                    height: 20px;
-                    width: 20px;
-                }
-            }
-
-        }
-    }
-    /*END totaliser*/
-        
-    form {
-
-        //Buttons
-        input[type="submit"],
-        .button
-        {
-            background-color:$accent; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
-            font-weight: bold;
-            &:hover {
-                opacity: .7;
-            }
+        #form_col1, #form_col2 {
+            float: none;
+            width: 100%;
+            clear: both;
         }
         .check_radio_field.donate_amount_wrap label {
             width: 30%;
-            &.donate_amount-selected {
-                background-color: $accent;
+            font-size: 1.5em;
+            height: auto;
+            margin: 0 2.5% 20px 0;
+            padding: 0.25em 0.5em;
+            border: 1px $accent solid;
+            &:hover, &.donate_amount-selected {
+                background: $secondary-accent;
+                color: $dark-color;
+                border-color: $dark-color;
             }
-        }
-        .custom_fields {
-            p {
-                font-size: 14px;
-                line-height: 1.2em;
-            }
-        }
-
-        //error message
-        #error_message {
-            background-color: $error;
-            color: $error-text;
-        }
-
-        .error_input {
-            border-color: $error;
-        }
-        .error_checkbox {
-            color: $main-text;
-
-        }
-
-
-    }
-    /*END Form*/
-    
-    /*Thankyou*/
-    #can_thank_you {
-      background-color: $white;
-      color: $main-text;
-      box-shadow: none;
-        
-        #action_info {
-          border: 0;
-            .action_info_user {
-              color: $accent;
-                a, a:hover, h1 {
-                    color: $accent;
+            /*Mobile*/
+            @media (max-width: 1200px) {
+                & {
+                    width: 100%;
+                    margin-right: 0;
                 }
             }
         }
-    }
-    /*END Thankyou*/
-}
-/*END Main wrapper*/
-
-/*Footer*/
-footer {
-    font-size: 0.8em;
-    text-align: center;
-    background-color: $footer;
-    color: $footer-text;
-    .gen_wrapper {
-        width: 650px;
-    }
-    a {
-        color: $footer-text;
-        font-weight: bold;
-    }
-}
-
-/*Sticky Button*/
-#sticky-button {
-  position: fixed;
-  bottom: 0;
-  z-index: 1000;
-  left: 0;
-  background: $secondary-accent;
-  color: white;
-  font-weight: bold;
-  font-size: 14px;
-  padding: 14px;
-  width: 100%;
-  display: none;
-  text-align: center;
-}
-
-
-#modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    #opt-in-sure {
-      background-color: $white;
-      margin: 15% auto; /* 15% from the top and centered */
-      padding: 30px;
-      border: 4px solid $secondary-accent;
-      width: 80%; /* Could be more or less, depending on screen size */
-        margin-bottom: auto;
-        h2 {
-            color: $accent;
-            margin: 0;
-            font-family: $heading-font;
+        .donate_recurring {
+            background: transparent;
         }
-        button.subscribe {
-            background: $accent;
+        #donate_login, #donation_welcome {
+            background: $dark-color;
             color: $white;
-            font-size: 1.2em;
-            padding: 0.75em 1.4em;
-            border: 0;
+            font-size: 0.9em;
+            margin-top: auto;
+            a {color: $secondary-accent;}
         }
-        hr {
-            margin-top: 1.5em;
-            
+        .floatlabel-wrapper .floatlabel-label {
+            color: $main-text;
         }
-        .close {
-            font-size: 0.95em;
-            margin-top: 1.5em;
-        }
-        .close-button {
+        input[type=text], input[type=password], input[type=url], input[type=email], input[type=tel], input[type=number], span.can_select {
+            color: $main-text;
+            border-color: $dark-color;
+            &::placeholder{
                 color: $main-text;
-                padding: 0.75em 1.5em;
-                font-size: 1em;
             }
-    }
-}
-
-
-/*Mobile*/
-@media (max-width: 1200px) {
-  .footer-info p {
-    width: 70%;
-  }
-}
-@media (max-width: 787px) {
-    
-    
-    .footer-logo {
-        display: block;
-    }
-
-  .footer-info {
-    text-align: center;
-  }
-
-  .footer-info p {
-    width: 100%;
-  }
-
-  #sticky-button {
-    display: block;
-  }
-    
-    
-}
-
-/*Fundraising*/
-body #can_embed_form.can_768 {
-    #can_main_col {
-      width: 50%;
-      float: left;
-    }
-    #can_sidebar {
-      width: 45%;
-      float: right;
+            &:focus {
+                border-color: $accent;
+            }
+        }
+        .donate_cc_exp {
+            width: 48.75%;
+            &.donate_cc_month {
+                margin-right: 2.5%;
+            }
+        }
+        .can_button, #donate_auto_modal input[type=submit], #donate_auto_modal .button, #donate_make_recurring_modal input[type=submit], #donate_make_recurring_modal .button, input[type=submit], .button {
+            border: 3px $accent solid;
+            font-size: 1.5em;
+            background: $white;
+            color: $accent;
+            font-weight: bold;
+            padding: 0.5em;
+            -webkit-appearance: none; 
+            &:hover {
+                background: $accent;
+                color: $white;
+                border-color: $white;
+            }
+        }
+        #d_sharing, #donate_disclaimer {border: none;}
+        #can_thank_you {
+            background: $dark-color;
+            h3.entry-title {
+                border-color: $secondary-accent;
+            }
+            h4::after {display: none;}
+        }
     }
 }
